--- a/index.html
+++ b/index.html
@@ -13,12 +13,23 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
+      background: 
+        linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
+        url('FONDOOO.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      animation: parallax 60s linear infinite;
+    }
+
+    @keyframes parallax {
+      0% { background-position: center center; }
+      50% { background-position: center top; }
+      100% { background-position: center center; }
     }
 
     .ventana {
@@ -84,8 +95,7 @@
     button:hover {
       background-color: #005f99;
     }
-
-    #resultado {
+    resultado {
       margin-top: 20px;
       background-color: #292929;
       padding: 20px;
@@ -117,13 +127,6 @@
       justify-content: space-between;
       margin-bottom: 20px;
       gap: 10px;
-    }
-
-    .top-buttons button {
-      flex: 1;
-      padding: 10px;
-      font-size: 14px;
-      border-radius: 8px;
     }
 
     .formulario-popup {
@@ -158,10 +161,6 @@
       z-index: 1000;
       display: none;
       box-shadow: 0 0 10px #000;
-    }
-
-    .busqueda {
-      display: block;
     }
 
     .botones-busqueda {
@@ -200,7 +199,6 @@
 
     <div id="resultado">Resultado aquí...</div>
   </div>
-
   <form id="formulario-agregar" action="https://script.google.com/macros/s/AKfycbyUsEGU0mcNE2xNlMpVQB2WXehlejAyESWuqiFONMXCWkxxVeYzU0iHffbb207HfnL5aA/exec" method="POST" target="hidden_iframe" onsubmit="mostrarConfirmacion()" style="display:none;">
     <div class="formulario-popup" id="popup-formulario">
       <h2>AGREGAR NUEVO TÉRMINO</h2>
