--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     }
 
     body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: 
-        linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
-        url('FONDOOO.jpeg') no-repeat center center fixed;
-      background-size: cover;
-      background-attachment: fixed;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      animation: parallax 60s linear infinite;
-    }
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: 
+    linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
+    url('FONDOOO.jpeg') no-repeat center center fixed;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  animation: parallax 60s linear infinite;
+}
 
     @keyframes parallax {
       0% { background-position: center center; }
@@ -134,7 +134,12 @@
     .botones-busqueda button {
       width: 120px;
     }
-  </style>
+  @keyframes parallax {
+  0% { background-position: center center; }
+  50% { background-position: center top; }
+  100% { background-position: center center; }
+}
+</style>
 </head>
 <body>
   <div class="ventana">
@@ -164,38 +169,17 @@
     }
 
     function buscar() {
-  const input = normalizarTexto(document.getElementById("termino").value.trim());
-  const resultado = document.getElementById("resultado");
-  resultado.innerHTML = "";
+      const input = normalizarTexto(document.getElementById("termino").value.trim());
+      const resultado = document.getElementById("resultado");
+      resultado.innerHTML = "";
 
-  let claveEncontrada = null;
+      const claves = Object.keys(glosario);
+      const claveEncontrada = claves.find(clave => normalizarTexto(clave) === input);
 
-  for (let clave in glosario) {
-    if (normalizarTexto(clave) === input) {
-      claveEncontrada = clave;
-      break;
-    }
-  }
-
-  if (!claveEncontrada) {
-    resultado.innerText = "Término no encontrado.";
-    return;
-  }
-
-  const datos = glosario[claveEncontrada];
-  if (datos.categoria && datos.categoria.toLowerCase() === "abreviatura") {
-    resultado.innerHTML = `<div class="titulo-resultado">${claveEncontrada}</div><strong>Definición:</strong><br>${datos.definicion}`;
-  } else {
-    resultado.innerHTML = `
-      <div class="titulo-resultado">${claveEncontrada}</div>
-      <strong>Traducción:</strong> ${datos.traduccion || "-"}<br>
-      <strong>Pronunciación:</strong> ${datos.pronunciacion || "-"}<br>
-      <strong>Categoría:</strong> ${datos.categoria || "-"}<br>
-      <strong>Definición:</strong><br>${datos.definicion || "-"}<br>
-      <strong>Sinónimos:</strong><br>
-      <div class="sinonimos">${(datos.sinonimos || []).map(s => `<span>${s}</span>`).join(" ")}</div>`;
-  }
-}
+      if (!claveEncontrada) {
+        resultado.innerText = "Término no encontrado.";
+        return;
+      }
 
       const datos = glosario[claveEncontrada];
       if (datos.categoria && datos.categoria.toLowerCase() === "abreviatura") {
