--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   </script>
 <form id="formulario-agregar" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 999; background: #202020; padding: 20px; border-radius: 12px; max-width: 500px; width: 90%; height: auto; overflow-y: auto;">
   <div class="formulario-popup" id="popup-formulario">
-    <h2>AGREGAR NUEVO TÉRMINO</h2>
+    <h2 style="font-family: 'MiddleOfApril', cursive; color: white; font-weight: bold;">AGREGAR NUEVO TÉRMINO</h2>
     <select name="tipo" id="tipo" required onchange="mostrarCampos(this.value)">
       <option value="">Seleccionar tipo</option>
       <option value="abreviatura">Abreviatura</option>
