--- a/index.html
+++ b/index.html
@@ -151,8 +151,11 @@
       <button onclick="buscar()">Buscar</button>
       <button onclick="limpiarBusqueda()" style="background-color: #444;">Limpiar</button>
     </div>
-    <div class="botones-superiores" style="margin-top: 20px;">
+    <div style="position: absolute; top: 20px; left: 30px;">
   <button onclick="abrirFormulario()">Agregar Término</button>
+</div>
+<div style="position: absolute; top: 20px; right: 30px;">
+  <button onclick="window.location.href='admin.html'">Admin</button>
 </div>
     <div id="resultado">Resultado aquí...</div>
   </div>
