--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
       <button onclick="buscar()">Buscar</button>
       <button onclick="limpiarBusqueda()" style="background-color: #444;">Limpiar</button>
     </div>
-    <div style="position: absolute; top: 20px; left: 30px;">
+    <div style="position: fixed; top: 10px; left: 20px; z-index: 1001;">
   <button onclick="abrirFormulario()">Agregar Término</button>
 </div>
-<div style="position: absolute; top: 20px; right: 30px;">
+<div style="position: fixed; top: 10px; right: 20px; z-index: 1001;">
   <button onclick="window.location.href='admin.html'">Admin</button>
 </div>
     <div id="resultado">Resultado aquí...</div>
