--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
     <button type="button" onclick="cerrarFormulario()">Cerrar</button>
   </div>
 </form>
-<div id="mensaje-popup" style="position: fixed; top: 20px; background-color: #3ae374; color: black; padding: 12px 20px; border-radius: 10px; font-weight: bold; z-index: 1000; display: none; box-shadow: 0 0 10px #000;">📩 Enviado a revisión exitosamente✅ Guardado correctamente</div>
+<div id="mensaje-popup" style="position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #3ae374; color: black; padding: 12px 20px; border-radius: 10px; font-weight: bold; z-index: 1000; display: none; box-shadow: 0 0 10px #000;">
+📩 Enviado a revisión exitosamente
+</div>
 <iframe name="hidden_iframe" style="display:none;"></iframe>
 <script>
   function abrirFormulario() {
@@ -258,7 +260,7 @@
       popup.style.display = "none";
       document.getElementById("formulario-agregar").reset();
       mostrarCampos("");
-    }, 1500);
+    }, 2000);
   }
 </script>
 </body>
